apps/plex/plex.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.apps.home.sundland.net`) && PathPrefix(`/`)
      services:
        - name: plex-plex-media-server
          namespace: plex
          port: 32400
          scheme: http
  tls: { }
